[package]
edition = "2021"
name = "drama-llama"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#name = "split-bam-by-reads"
#path = "src/split-bam-by-reads.rs"

[dependencies]
anyhow = "1.0.70"
bio = "1.1.0"
clap = {version = "4.2.1", features = ["derive"]}
env_logger = "0.9.0"
indicatif = "0.17.3"
log = "0.4.17"
rayon = "1.5"
rust-htslib = "0.42.0"
